# google-ds-star

./: QUICK_START.md  README.md  main.py  setup.sh  start.sh
backend/: .gitignore  pyproject.toml  server.py
backend/ds_star/: config.py
backend/ds_star/agents/: debugger.py  verifier.py
backend/ds_star/core/: agent.py  session.py  types.py
backend/ds_star/prompts/: __init__.py  templates.py
backend/ds_star/providers/: openai_provider.py
data/: countries.json  transactions.csv
ds_star/: config.py
ds_star.egg-info/: SOURCES.txt  top_level.txt
ds_star/agents/: __init__.py  planner.py
ds_star/core/: __init__.py  agent.py  executor.py  session.py
ds_star/prompts/: templates.py
ds_star/providers/: __init__.py  base.py
ds_star/utils/: __init__.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CodeViewer.jsx  ConfigPanel.jsx  Dashboard.jsx  FileUpload.jsx  Header.jsx  ProgressMonitor.jsx  QueryInput.jsx  ResultsDisplay.jsx
frontend/src/store/: useAgentStore.js
google-ds-star/: README.md  pyproject.toml  test_pandas_display.py
google-ds-star/ds_star/: __init__.py
google-ds-star/ds_star.egg-info/: PKG-INFO  requires.txt
google-ds-star/ds_star/agents/: analyzer.py  coder.py  finalizer.py  router.py  verifier.py
google-ds-star/ds_star/providers/: openai_provider.py
google-ds-star/ds_star/utils/: logging.py
